--- a/plugins/kubernetes/package.json
+++ b/plugins/kubernetes/package.json
@@ -26,10 +26,18 @@
   "dependencies": {
     "@backstage/core-components": "^0.14.7",
     "@backstage/core-plugin-api": "^1.9.2",
+    "@backstage/plugin-catalog-react": "^1.12.0",
     "@backstage/theme": "^0.5.4",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@kubernetes/client-node": "0.20.0",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.61",
+    "@mui/material": "^5.15.19",
+    "@types/node": "^20.14.2",
+    "graphql": "^16.8.1",
+    "graphql-request": "^7.0.1",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
