--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,12 @@
   "exclude": ["node_modules"],
   "compilerOptions": {
     "outDir": "dist-types",
-    "rootDir": "."
-  }
+    "rootDir": ".",
+    "baseUrl": ".",
+    "paths": {
+      "@redhatinsights/backstage-plugin-ibutsu": ["./plugins/ibutsu"]
+    },
+    "moduleResolution": "Bundler",
+  },
+
 }
