--- a/plugins/kubernetes/package.json
+++ b/plugins/kubernetes/package.json
@@ -35,9 +35,11 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@mui/material": "^5.15.19",
+    "@patternfly/react-core": "^5.3.3",
     "@types/node": "^20.14.2",
     "graphql": "^16.8.1",
     "graphql-request": "^7.0.1",
+    "react-redux": "^9.1.2",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
