--- a/plugins/kubernetes/package.json
+++ b/plugins/kubernetes/package.json
@@ -36,6 +36,7 @@
     "@material-ui/lab": "4.0.0-alpha.61",
     "@mui/material": "^5.15.19",
     "@patternfly/react-core": "^5.3.3",
+    "@patternfly/react-icons": "^5.3.2",
     "@types/node": "^20.14.2",
     "graphql": "^16.8.1",
     "graphql-request": "^7.0.1",
