--- a/app-config.yaml
+++ b/app-config.yaml
@@ -45,7 +45,7 @@ integrations:
 
 proxy:
   endpoints:
-    '/kubernetes': 
+    '/kubernetes-deployments': 
       target: 'https://app-interface.apps.rosa.appsrep09ue1.03r5.p3.openshiftapps.com/'
     '/stage':
       target: ''
