--- a/build
+++ b/build
@@ -1,9 +1,9 @@
 #!/bin/bash
 
 yarn workspace @redhatinsights/backstage-plugin-kubernetes export-dynamic
-cd plugins/kubernetes
+cd plugins/kubernetes/
 rm *.tgz
-npm pack
+npm pack ./dist-dynamic
 cd ../..
 mv plugins/kubernetes/*.tgz .
 sha256sum *.tgz | awk '{print $1}' | xxd -r -p | base64
