--- a/plugins/kubernetes/package.json
+++ b/plugins/kubernetes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@internal/backstage-plugin-kubernetes",
+  "name": "@redhatinsights/backstage-plugin-kubernetes",
   "version": "0.1.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
@@ -21,15 +21,27 @@
     "test": "backstage-cli package test",
     "clean": "backstage-cli package clean",
     "prepack": "backstage-cli package prepack",
-    "postpack": "backstage-cli package postpack"
+    "postpack": "backstage-cli package postpack",
+    "export-dynamic": "janus-cli package export-dynamic-plugin"
   },
   "dependencies": {
     "@backstage/core-components": "^0.14.7",
     "@backstage/core-plugin-api": "^1.9.2",
+    "@backstage/plugin-catalog-react": "^1.12.0",
     "@backstage/theme": "^0.5.4",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@kubernetes/client-node": "0.20.0",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.61",
+    "@mui/material": "^5.15.19",
+    "@patternfly/react-core": "^5.3.3",
+    "@patternfly/react-icons": "^5.3.2",
+    "@types/node": "^20.14.2",
+    "graphql": "^16.8.1",
+    "graphql-request": "^7.0.1",
+    "react-redux": "^9.1.2",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
@@ -40,12 +52,14 @@
     "@backstage/core-app-api": "^1.12.5",
     "@backstage/dev-utils": "^1.0.32",
     "@backstage/test-utils": "^1.5.5",
+    "@janus-idp/cli": "^1.11.1",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
     "msw": "^1.0.0"
   },
   "files": [
-    "dist"
+    "dist",
+    "dist-scalprum"
   ]
 }
