--- a/build
+++ b/build
@@ -1,9 +1,9 @@
 #!/bin/bash
 
-yarn workspace @redhatinsights/backstage-plugin-kubernetes-info export-dynamic
-cd plugins/kubernetes/
+yarn workspace @redhatinsights/backstage-plugin-openshift export-dynamic
+cd plugins/openshift/
 rm *.tgz
 npm pack ./dist-dynamic
 cd ../..
-mv plugins/kubernetes/*.tgz .
+mv plugins/openshift/*.tgz .
 sha256sum *.tgz | awk '{print $1}' | xxd -r -p | base64
