--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "rootDir": ".",
     "baseUrl": ".",
     "paths": {
-      "@redhatinsights/backstage-plugin-kubernetes-info": ["./plugins/kubernetes"]
+      "@redhatinsights/backstage-plugin-openshift": ["./plugins/openshift"]
     },
     "moduleResolution": "Bundler",
   },
